fix webkit scrollbar size calculation

--- a/test/js/styl/test.styl
+++ b/test/js/styl/test.styl
@@ -12,9 +12,12 @@ body {
 }
 
 .scrollable--container::-webkit-scrollbar {
-	//height: auto;
-	//width: auto;
 	background: red;
+}
+
+.showWebkitScrollbar::-webkit-scrollbar {
+	height: auto;
+	width: auto;
 }
 
 .scrollbar {
